force-app/main/default/objects/SalesforceObject__c/SalesforceObject__c.object-meta.xml
<CustomObject>
    <label>Salesforce Object</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Salesforce Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>