force-app/main/default/objects/SalesforceObject__c/fields/IsCustom__c.field-meta.xml
<CustomField>
    <fullName>IsCustom__c</fullName>
    <formula>RIGHT(Name, 3) == &apos;__c&apos;</formula>
    <label>Custom?</label>
    <type>Checkbox</type>
</CustomField>