force-app/main/default/objects/SalesforceObject__c/fields/Latest__c.field-meta.xml
<CustomField>
    <fullName>Latest__c</fullName>
    <label>Latest</label>
    <length>255</length>
    <type>Text</type>
</CustomField>