force-app/main/default/objects/SalesforceObject__c/fields/Oldest__c.field-meta.xml
<CustomField>
    <fullName>Oldest__c</fullName>
    <label>Oldest</label>
    <length>255</length>
    <type>Text</type>
</CustomField>